Refactor + set max students for optionals